Projet GL/Projet_GL/src/test/deca/codegen/invalid/created/wrongfloat2.res
variable defined at [4, 10], type=float
